--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Flexbox Login UI</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Flexbox Login UI</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
 
-<body>
-    <div class="container">
-        <div class="card">
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap"
+            rel="stylesheet">
 
-            <form>
-                <h1>Sign In</h1>
-                <input type="text" id="username" name="username" placeholder="User Name">
-                <input type="password" id="pwd" name="pwd" placeholder="Password">
-                <input type="submit" value="Submit">
-            </form>
+    </head>
 
+    <body>
+        <div class="container">
+            <div class="card">
+
+                <form>
+                    <h1>Sign In</h1>
+                    <input type="text" id="username" name="username" placeholder="User Name">
+                    <input type="password" id="pwd" name="pwd" placeholder="Password">
+                    <input type="submit" value="Submit">
+                </form>
+
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 
 </html>
