--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap"
-            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
 
     </head>
 
@@ -20,10 +19,10 @@
             <div class="card">
 
                 <form>
-                    <h1>Sign In</h1>
-                    <input type="text" id="username" name="username" placeholder="User Name">
-                    <input type="password" id="pwd" name="pwd" placeholder="Password">
-                    <input type="submit" value="Submit">
+                    <h1 class="sign-in-text">Sign in</h1>
+                    <input type="text" id="username" name="username" placeholder="username">
+                    <input type="password" id="pwd" name="pwd" placeholder="password">
+                    <input type="submit" value="Sign in">
                 </form>
 
             </div>
