Adjusted margins around title, form boxes, and button

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
+<!--  
+Author: David Bergstrom
+Last Updated: 6-21-22
+Description: 
+    This project creates a Login UI using Flexbox 
+    based of an example photo given to us. 
+-->
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>Flexbox Login UI</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="style.css" rel="stylesheet" type="text/css">
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
